# cmake_learning

./: .gitmodules  README.md
building_with_libraries/: README.md
building_with_libraries/source_code/with_dir/: CMakeLists.txt  main.cpp
building_with_libraries/source_code/with_dir/log_lib/: CMakeLists.txt  log.cpp  log.h
building_with_libraries/source_code/with_dir/math_lib/: CMakeLists.txt  math.cpp  math.h
building_with_libraries/source_code/without_dir/: CMakeLists.txt  main.cpp  plus.cpp
find_library_package/find_library/: README.md
find_library_package/find_library/src/: CMakeLists.txt  app.cpp
find_library_package/find_package/: README.md
find_library_package/find_package/src/: CMakeLists.txt  app.cpp  app.h
installing/: README.md
installing/install_via_cpack/src/: CMakeLists.txt
installing/install_via_cpack/src/math_lib/: math.cpp
installing/install_via_make/src/: CMakeLists.txt  main.cpp
installing/install_via_make/src/math_lib/: CMakeLists.txt
submodules/: .gitignore
submodules/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
what_is_cmake/: README.md
what_is_cmake/source_code/first_building/: CMakeLists.txt  hello.cpp
what_is_cmake/source_code/first_building/buildtree/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
